--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:theme="@style/Theme.Nait_Slimene_Amine_TP2"
         tools:targetApi="31">
         <activity
+            android:name=".vue.ConsultActivity"
+            android:exported="false" />
+        <activity
             android:name=".vue.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".vue.HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
